crates/language-v2/tests/src/fail/p2_specifiers/hard_fork_redundant_till/test.stderr
error: 'Till' with the first supported hard fork 'Frontier' produces an empty range, disabling the built-in on every hard fork.
  --> src/fail/p2_specifiers/hard_fork_redundant_till/test.rs:25:83
   |
25 |             definitions = [BuiltInDefinition(name = MyBuiltIn, evm_enabled = Till(Frontier))]
   |                                                                                   ^^^^^^^^
